# ocr-pdf

./: .gitignore  IELTS.txt  README.md  ai-image-ocr-pdf.py  electricity.txt  hand_written_image_scan_pdf.txt  image_scan_pdf.txt  language-with-ai.py  main.py  ocr-pdf.py  pyproject.toml  sample.txt
